[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Eric Preston <eric.preston@redis.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.6.0"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-env = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
